revisi draft done

--- a/bab1-pendahuluan.tex
+++ b/bab1-pendahuluan.tex
@@ -47,7 +47,7 @@ Tujuan dari penelitian ini adalah untuk mengembangkan sebuah program yang dapat 
 
 Ruang lingkup penelitian ini antara lain:
 \begin{enumerate}
-\item Analisis pemetaan adaptor untuk menghubungkan antara ontologi dan \textit{web service}.
+\item Analisis pemetaan \textit{adaptor} untuk menghubungkan antara ontologi dan \textit{web service}.
 \item Perancangan sistem yang dapat menghubungkan antara ontologi dan \textit{web service} melalui Zotonic.
 \item \textit{Refactoring} pembuatan \textit{business logic} yang sudah ada dengan memanfaatkan sistem yang dibuat.
 \end{enumerate}
